# jellyfin-cli

./: Cargo.toml
.github/workflows/: build-this.yml
src/: main.rs
src/cli/: args.rs  config.rs  list.rs  login.rs  mod.rs  pick.rs  search.rs
src/jellyfin/: auth.rs  config.rs  http.rs  media.rs  mod.rs  models.rs
src/utils/: ffplay.rs  mod.rs  mpv.rs  select.rs
