[package]
name = "jellyfin-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
confy = "1.0.0"
inquire = "0.6"
once_cell = "1.21.3"
which = "8.0.0"